src/objects/CIS_MemberOfCongress__c.object
<CustomObject>
    <description>Members of Congress</description>
    <fields>
        <fullName>Available_Budget__c</fullName>
        <description>Available Budget</description>
        <formula>Original_Budget__c -  Spent_Asset_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Available Budget</inlineHelpText>
        <label>Available Asset Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <description>Committee</description>
        <inlineHelpText>Committee</inlineHelpText>
        <label>Committee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>District</description>
        <inlineHelpText>District</inlineHelpText>
        <label>District</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Election_Year__c</fullName>
        <label>Next Election</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_of_Congress_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member of Congress Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CIS_Contact__c.Type__c</field>
                <operation>equals</operation>
                <value>Member of Congress</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CIS_Contact__c</referenceTo>
        <relationshipLabel>Members of Congress</relationshipLabel>
        <relationshipName>Members_of_Congress</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Budget__c</fullName>
        <description>Original Budget</description>
        <inlineHelpText>Original Budget</inlineHelpText>
        <label>Original Asset Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Political_Party__c</fullName>
        <description>Political Party</description>
        <inlineHelpText>Political Party</inlineHelpText>
        <label>Political Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spent_Asset_Budget__c</fullName>
        <label>Spent Asset Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_of_Office__c</fullName>
        <description>State of Office</description>
        <inlineHelpText>State of Office</inlineHelpText>
        <label>State of Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Elected__c</fullName>
        <description>For Congresspersons, enter the Year they were Elected</description>
        <label>Year Elected</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Member of Congress</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Congress_Name__c</columns>
        <columns>State_of_Office__c</columns>
        <columns>Political_Party__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Region__c</columns>
        <columns>Original_Budget__c</columns>
        <columns>Available_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>House</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Congress_Name__c</columns>
        <columns>State_of_Office__c</columns>
        <columns>Committee__c</columns>
        <columns>Year_Elected__c</columns>
        <columns>Region__c</columns>
        <columns>Political_Party__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CIS_MemberOfCongress__c.House</value>
        </filters>
        <label>House</label>
    </listViews>
    <listViews>
        <fullName>Senate</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Congress_Name__c</columns>
        <columns>Election_Year__c</columns>
        <columns>Region__c</columns>
        <columns>State_of_Office__c</columns>
        <columns>Original_Budget__c</columns>
        <columns>Available_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CIS_MemberOfCongress__c.Senate</value>
        </filters>
        <label>Senate</label>
    </listViews>
    <listViews>
        <fullName>Senators_Budgetary_Usage</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Congress_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Original_Budget__c</columns>
        <columns>Available_Budget__c</columns>
        <columns>Spent_Asset_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CIS_MemberOfCongress__c.Senate</value>
        </filters>
        <label>Senators&apos; Budgetary Usage</label>
    </listViews>
    <listViews>
        <fullName>Senators_Election_year</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Congress_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Election_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CIS_MemberOfCongress__c.Senate</value>
        </filters>
        <label>Senators Election year</label>
    </listViews>
    <nameField>
        <displayFormat>MOC-{0000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members of Congress</pluralLabel>
    <recordTypes>
        <fullName>House</fullName>
        <active>true</active>
        <description>House</description>
        <label>House</label>
    </recordTypes>
    <recordTypes>
        <fullName>Senate</fullName>
        <active>true</active>
        <description>Senate</description>
        <label>Senate</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Election_Year_must_be_4_digits</fullName>
        <active>true</active>
        <description>Election year must be 4 digits, and not greater than this year.</description>
        <errorConditionFormula>AND
  (OR   
   (  NOT(  LEN               (Election_Year__c ) = 4),
      NOT   (  ISNUMBER( Election_Year__c ))  
   ), 
 $RecordType.Name = &quot;Senate&quot;
)</errorConditionFormula>
        <errorMessage>Election year must be 4 digits, and not greater than this year.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Original_Asset_Budget_must_be_Greater_0</fullName>
        <active>true</active>
        <description>If Senate Record, the Original Asset Budget must be greater than 0</description>
        <errorConditionFormula>AND( Original_Budget__c &lt;= 0,  $RecordType.Name = &quot;Senate&quot;)</errorConditionFormula>
        <errorMessage>Original Asset Budget must be greater than zero</errorMessage>
    </validationRules>
</CustomObject>